2006-12-13  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/openbabel-[python,ruby,java,perl].i: Tidied up the
	references to classes in obiter.h (e.g. there's no such thing
	as OBResidueBondIter). Added some comments. Added wrappers for Python
	to allow iteration over atoms in a molecule, etc.
	This involved renaming the original OB method, and replacing
	it by a Python class implementing the iterator protocol.

2006-12-12  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/openbabel-[python,ruby,java,perl].i: Added a line to
	create a vector of unisigned ints, required to use the Fingerprint
	class. Also, added lines to prevent warnings due to shadowed classes
	in obiter.h.

2006-12-10  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel: New directory for public headers. Ensures
	internal and external code use the same 
	#include <openbabel/header.h> syntax.

	Also, all related UNIX-based build changes.

2006-12-04  Vincent Favre-Nicolin <Vincent.Favre-Nicolin@ujf-grenoble.fr>

	* src/format/ciffformat.cpp: Added new OBFormat-derived class to
	handle Crystallographic Information Files. Initial implementation
	handles reading & writing atomic coordinates, reading unit cell
	and spacegroup name but no interpretation of symmetry is done.

2006-12-04  Benoit Jacob <jacob@math.jussieu.fr>

   * src/math/vector3.cpp: optimize createOrthoVector(), update doc.

2006-12-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/generic.h, src/generic.cpp (OBRingData): Add new methods for
	iterating over rings. (OBAngleData): Modifications from Tim
	Vandermeersch to facilitate iteration over angles in an OBMol.

	* src/mol.h, src/mol.cpp (FindAngles()): New method to parallel
	FindTorsions() for filling an OBAngleData record in an OBMol,
	contributed by Tim.

	* src/obiter.h, src/obiter.cpp: New classes and macros, including
	FOR_RINGS_OF_MOL, FOR_ANGLES_OF_MOL, FOR_TORSIONS_OF_MOL
	FOR_PAIRS_OF_MOL, contributed by Tim.
